--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@
         <p>NEW ARRIWALS.</p>
         <button>Shop Collection</button>
 
-        <img width="300" src="block-three-four-img/skateboarder.png"
-            alt="white sneakers on a skateboard">
+        <img width="300" src="block-three-four-img/skateboarder.png" alt="white sneakers on a skateboard">
         <p>TRAINERS.</p>
         <button>Shop Collection</button>
 
@@ -162,79 +161,79 @@
 
     <div id="collection">
         <div>
-        <h1>MAIN COLLECTION</h1>
-        <hr style="width:50%;">
-        <h2>Shop our main fitness collection for men and women represented by the famous brands.</h2>
-        <h4>Women</h4>
-        <h4>Men</h4>
-        <h4>Shoes</h4>
+            <h1>MAIN COLLECTION</h1>
+            <hr style="width:50%;">
+            <h2>Shop our main fitness collection for men and women represented by the famous brands.</h2>
+            <h4>Women</h4>
+            <h4>Men</h4>
+            <h4>Shoes</h4>
         </div>
+        <div>
             <div>
-                <div>
-                    <img src="block-nine-ten-img/woman.jpg" alt="woman">
-                    <br>
-                    <a href="#">Puma Sports Bra</a>
-                    <h2>$12,00USD</h2>
-                    <button>"Add to Cart"</button>
-                </div>
-                <div>
-                    <img src="block-nine-ten-img/woman-one.jpg" alt="woman-one">
-                    <br>
-                    <a href="#">Reebok Long Sleeve Top</a>
-                    <h3>$18,00USD</h3>
-                    <button>"Add to Cart"</button>
-                </div>
-                <div>
-                    <img src="block-nine-ten-img/woman-two.jpg" alt="woman-two">
-                    <br>
-                    <a href="#">Quicksilver Workout Top</a>
-                    <h3>$12,00USD</h3>
-                    <button>"Add to Cart"</button>
-                </div>
-                <div>
-                    <img src="block-nine-ten-img/man.jpg" alt="man">
-                    <br>
-                    <a href="#">Adidas Compression Tee</a>
-                    <h3>$33,00USD</h3>
-                    <button>"Add to Cart"</button>
-                </div>
-                <div>
-                    <img src="block-nine-ten-img/man-one.jpg" alt="man-one">
-                    <br>
-                    <a href="#">Reebok Fitness Jacket</a>
-                    <h3>$52,00USD</h3>
-                    <button>"Add to Cart"</button>
-                </div>
-                <div>
-                    <img src="block-nine-ten-img/man-two.jpg" alt="man-two">
-                    <br>
-                    <a href="#">Quicksilver Tech T-Shirt</a>
-                    <h3>$21,00USD</h3>
-                    <button>"Add to Cart</button>
-                </div>
-                <div>
-                    <img src="block-nine-ten-img/sneakers.jpg" alt="sneakers">
-                    <br>
-                    <a href="#">Nike Amanda Running Shoes</a>
-                    <h3>$120,00USD</h3>
-                    <button>"Add to Cart"</button>
-                </div>
-                <div>
-                    <img src="block-nine-ten-img/sneakers-one.jpg" alt="sneakers-one">
-                    <br>
-                    <a href="#">Puma Basket Shoes</a>
-                    <h3>$140,00USD</h3>
-                    <button>"Add to Cart</button>
-                </div>
-                <div>
-                    <img src="block-nine-ten-img/sneakers-two.jpg" alt="sneakers-two">
-                    <br>
-                    <a href="#">Adidas Campus</a>
-                    <h3>$130,00USD</h3>
-                    <button>"Add to Cart"</button>
-                </div>
-
+                <img src="block-nine-ten-img/woman.jpg" alt="woman">
+                <br>
+                <a href="#">Puma Sports Bra</a>
+                <h2>$12,00USD</h2>
+                <button>"Add to Cart"</button>
             </div>
+            <div>
+                <img src="block-nine-ten-img/woman-one.jpg" alt="woman-one">
+                <br>
+                <a href="#">Reebok Long Sleeve Top</a>
+                <h3>$18,00USD</h3>
+                <button>"Add to Cart"</button>
+            </div>
+            <div>
+                <img src="block-nine-ten-img/woman-two.jpg" alt="woman-two">
+                <br>
+                <a href="#">Quicksilver Workout Top</a>
+                <h3>$12,00USD</h3>
+                <button>"Add to Cart"</button>
+            </div>
+            <div>
+                <img src="block-nine-ten-img/man.jpg" alt="man">
+                <br>
+                <a href="#">Adidas Compression Tee</a>
+                <h3>$33,00USD</h3>
+                <button>"Add to Cart"</button>
+            </div>
+            <div>
+                <img src="block-nine-ten-img/man-one.jpg" alt="man-one">
+                <br>
+                <a href="#">Reebok Fitness Jacket</a>
+                <h3>$52,00USD</h3>
+                <button>"Add to Cart"</button>
+            </div>
+            <div>
+                <img src="block-nine-ten-img/man-two.jpg" alt="man-two">
+                <br>
+                <a href="#">Quicksilver Tech T-Shirt</a>
+                <h3>$21,00USD</h3>
+                <button>"Add to Cart</button>
+            </div>
+            <div>
+                <img src="block-nine-ten-img/sneakers.jpg" alt="sneakers">
+                <br>
+                <a href="#">Nike Amanda Running Shoes</a>
+                <h3>$120,00USD</h3>
+                <button>"Add to Cart"</button>
+            </div>
+            <div>
+                <img src="block-nine-ten-img/sneakers-one.jpg" alt="sneakers-one">
+                <br>
+                <a href="#">Puma Basket Shoes</a>
+                <h3>$140,00USD</h3>
+                <button>"Add to Cart</button>
+            </div>
+            <div>
+                <img src="block-nine-ten-img/sneakers-two.jpg" alt="sneakers-two">
+                <br>
+                <a href="#">Adidas Campus</a>
+                <h3>$130,00USD</h3>
+                <button>"Add to Cart"</button>
+            </div>
+
+        </div>
 
     </div>
     <!--Block 9-10 end-->
