--- a/index.html
+++ b/index.html
@@ -142,19 +142,19 @@
 
     <!--Block 9-10 Pavlo start-->
     <div class="carusel">
-        <img width="300" src="block-9-10-img/carusel/one.jpg" alt="one">
+        <img width="300" src="block-nine-ten-img/carusel/one.jpg" alt="one">
         <h2>20% of all T-Shirt</h2>
         <a href="#">Shop Collection</a>
         <br>
-        <img width="300" src="block-9-10-img/carusel/two.jpg" alt="two">
+        <img width="300" src="block-nine-ten-img/carusel/two.jpg" alt="two">
         <h2>25% OFF All Trainers </h2>
         <a href="#">Shop Collection</a>
         <br>
-        <img width="300" src="block-9-10-img/carusel/three.jpg" alt="three">
+        <img width="300" src="block-nine-ten-img/carusel/three.jpg" alt="three">
         <h2>30% OFF ALL Jacket</h2>
         <a href="#">Shop Collection</a>
         <br>
-        <img width="300" src="block-9-10-img/carusel/two.jpg" alt="two">
+        <img width="300" src="block-nine-ten-img/carusel/four.jpg" alt="four">
         <h2>25% OFF All Trainers </h2>
         <a href="#">Shop Collection</a>
     </div>
