--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <main>
         <div class="front-page">
             <div class="second-block-background">
-                <video src="https://www.youtube.com/watch?v=KNO7JjCzLug&ab_channel=MotionArray"></video>
+                <img width="500" src="block-one-and-two-images/background.jfif" alt="Basketball player">
             </div>
             <div class="front-page-text">
                 <p><b>ASPIRE TO MORE</b></p>
