--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
         <div class="front-page">
             <div class="second-block-background">
                 <img width="500" src="block-one-and-two-images/background.jfif" alt="Basketball player">
+                <video src="block-one-and-two-images/videoplayback.mp4">
+
+                </video>
             </div>
             <div class="front-page-text">
                 <p><b>ASPIRE TO MORE</b></p>
