--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
         <div class="front-page">
             <div class="second-block-background">
                 <img width="500" src="block-one-and-two-images/background.jfif" alt="Basketball player">
-                <video src="block-one-and-two-images/videoplayback.mp4" autoplay=1>
-
+                <video autoplay>
+                    <source src="videoplayback.mp4" type="video/mp4">
                 </video>
             </div>
             <div class="front-page-text">
