--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="front-page">
             <div class="second-block-background">
                 <img width="500" src="block-one-and-two-images/background.jfif" alt="Basketball player">
-                <video controls autoplay=1>
+                <video controls autoplay>
                     <source src="block-one-and-two-images/videoplayback.mp4" type="video/mp4">
                 </video>
             </div>
