seven-eight-blocks added

--- a/index.html
+++ b/index.html
@@ -141,6 +141,67 @@
     <!--Block 5-6 end-->
 
     <!--Block 7-8 Vova start-->
+    
+    <!-- Mid Season Sele Section -->
+    <section class="mid-season-sale-section">
+        <div>
+            <h2 class="mss-header">
+                Mid-Season Sale<span class="header-dot-style">.</span>
+            </h2>
+            <!-- header-buttom-border-dash or span? -->
+            <span class="mss-dash"></span>
+            <p>Shop clothes and trainers that are chosen by thousands of our clients. 
+            Click on the image to see the product details and click Add to Cart to make the purchase.
+            We are committed to give you the best buying experience!</p>
+        </div>
+        <div class="mss-products-section">
+            <div class="mss-product">
+                <img src="block-seven-eight-img/adidas-cloudfoam-trainers.jpg" alt="adidas-cloudfoam-trainers">
+                <h5 class="mss-product-tittle">Adidas Cloudfoam Trainers</h5>
+                <span class="mss-product-price">$60,00</span>
+                <a href="#" class="btn-add-to-cart">Add to Cart</a>
+            </div>
+            <div class="mss-product">
+                <img src="block-seven-eight-img/reebok-workout-shorts.jpg" alt="reebok-workout-shorts">
+                <h5 class="mss-product-tittle">Reebok Workout Shorts</h5>
+                <span class="mss-product-price">$25,00</span>
+                <a href="#" class="btn-add-to-cart">Add to Cart</a>
+            </div>
+            <div class="mss-product">
+                <img src="block-seven-eight-img/puma-fitness-shoes-grey.jpg" alt="puma-fitness-shoes-grey">
+                <h5 class="mss-product-tittle">Puma Fitness Shoes in Grey</h5>
+                <span class="mss-product-price">$60,00</span>
+                <a href="#" class="btn-add-to-cart">Add to Cart</a>
+            </div>
+            <div class="mss-product">
+                <img src="block-seven-eight-img/puma-essentia-tank-top.jpg" alt="puma-essentia-tank-top">
+                <h5 class="mss-product-tittle">Puma Essential Tank Top</h5>
+                <span class="mss-product-price">$43,00</span>
+                <a href="#" class="btn-add-to-cart">Add to Cart</a>
+            </div>
+            <div class="mss-product">
+                <img src="block-seven-eight-img/nike-classic-polo-shirt.jpg" alt="nike-classic-polo-shirt">
+                <h5 class="mss-product-tittle">Nike Classic Polo T-Shirt</h5>
+                <span class="mss-product-price">$23,00</span>
+                <a href="#" class="btn-add-to-cart">Add to Cart</a>
+            </div>
+        </div>
+    </section>
+    
+    <!-- Get your discount section -->
+    <section class="get-your-discount-section">
+        <img src="block-seven-eight-img/get-your-discount-background.png" alt="">
+        <div class="">
+            <h4>Sale of the month</h4>
+            <h2>
+                Get Your Discount<span class="header-dot-style">.</span>
+            </h2>
+            <a href="#" class="btn-shop-now">Shop now</a>
+        </div>
+        <!-- One empty block with the same dimensions -->
+        <div>
+        </div>
+    </section>
     <!--Block 7-8 end-->
 
     <!--Block 9-10 Pavlo start-->
