added id sale for navigation

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     <!--Block 7-8 Vova start-->
     
     <!-- Mid Season Sele Section -->
-    <section class="mid-season-sale-section">
+    <section id="sale" class="mid-season-sale-section">
         <div>
             <h2 class="mss-header">
                 Mid-Season Sale<span class="header-dot-style">.</span>
