--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </p>
         </div>
         <div class="logo">
-            <img width="200" src="block-one-and-two-images/logo.svg" alt="logo">
+            <img width="200" src="img/logo.svg" alt="logo">
         </div>
         <div class="nav">
             <nav>
@@ -30,11 +30,11 @@
         </div>
         <div class="social-media-logo">
             <nav>
-                <a href="https://www.youtube.com/"> <img src="block-one-and-two-images/Icons/icon-youtube.svg"
+                <a href="https://www.youtube.com/"> <img src="img/icons/icon-youtube.svg"
                         alt="Youtube logo"></a>
-                <a href="https://www.facebook.com/"> <img src="block-one-and-two-images/Icons/icon-facebook.svg"
+                <a href="https://www.facebook.com/"> <img src="img/icons/icon-facebook.svg"
                         alt="Facebook logo"></a>
-                <a href="https://www.instagram.com/"> <img src="block-one-and-two-images/Icons/icon-instagram.svg"
+                <a href="https://www.instagram.com/"> <img src="img/icons/icon-instagram.svg"
                         alt="Instagram logo"></a>
             </nav>
         </div>
@@ -42,7 +42,7 @@
     <main>
         <div class="front-page">
             <div class="second-block-background">
-                <img width="500" src="block-one-and-two-images/background.jfif" alt="Basketball player">
+                <img width="500" src="img/background.jfif" alt="Basketball player">
             </div>
             <div class="front-page-text">
                 <p><b>ASPIRE TO MORE</b></p>
@@ -52,21 +52,21 @@
                 <a href="#collection">Shop Now</a>
             </div>
         </div>
-    </main>
+    
     <!--Block 1-2 end-->
 
     <!--Block 3-4 Ira start-->
 
     <div class="menu">
-        <img width="300" src="block-three-four-img/man-with-sneakers.svg" alt="men with sneakers">
+        <img width="300" src="img/man-with-sneakers.svg" alt="men with sneakers">
         <p>NEW ARRIWALS.</p>
         <button>Shop Collection</button>
 
-        <img width="300" src="block-three-four-img/skateboarder.png" alt="white sneakers on a skateboard">
+        <img width="300" src="img/skateboarder.png" alt="white sneakers on a skateboard">
         <p>TRAINERS.</p>
         <button>Shop Collection</button>
 
-        <img width="300" src="block-three-four-img/clothes.png" alt="topic and bottle">
+        <img width="300" src="img/clothes.png" alt="topic and bottle">
         <p>HOT SALE.</p>
         <button>Shop Collection</button>
 
@@ -98,7 +98,7 @@
     <!--Block 5-6 Artem start-->
     <div id="about-us">
         <div class="img-about-us">
-            <img width="500" src="block-five-six-image/about-us.jpg" alt="Two Men">
+            <img width="500" src="img/about-us.jpg" alt="Two Men">
         </div>
         <div class="header-about-us">
             <h2><span>About Us</span><span>.</span></h2>
@@ -116,17 +116,17 @@
                 comfortable and high-tech clothes and shoes for your outstanding results.</p>
         </div>
         <div class="social-media-logo">
-            <a href="https://www.youtube.com/"><img src="block-five-six-image/block-five-icon/icon-youtube.svg"
+            <a href="https://www.youtube.com/"><img src="img/icons/icon-youtube.svg"
                     alt="Youtube icon"></a>
-            <a href="https://www.facebook.com/"><img src="block-five-six-image/block-five-icon/icon-facebook.svg"
+            <a href="https://www.facebook.com/"><img src="img/icons/icon-facebook.svg"
                     alt="Facebook icon"></a>
-            <a href="https://www.instagram.com/"><img src="block-five-six-image/block-five-icon/icon-instagram.svg"
+            <a href="https://www.instagram.com/"><img src="img/icons/icon-instagram.svg"
                     alt="Instagram icon"></a>
         </div>
     </div>
     <div class="new-fitness-collection">
         <div class="fitness-collection-image">
-            <img width="500" src="block-five-six-image/new-trend.jpg" alt="Sport Women">
+            <img width="500" src="img/new-trend.jpg" alt="Sport Women">
         </div>
         <p>Trending.</p>
         <h2><span class="fitnes-collection-header">New Fitness Collection</span><span>.</span></h2>
@@ -153,31 +153,31 @@
         </div>
         <div class="mss-products-section">
             <div class="mss-product">
-                <img src="block-seven-eight-img/adidas-cloudfoam-trainers.jpg" alt="adidas-cloudfoam-trainers">
+                <img src="img/adidas-cloudfoam-trainers.jpg" alt="adidas-cloudfoam-trainers">
                 <h5 class="mss-product-tittle">Adidas Cloudfoam Trainers</h5>
                 <span class="mss-product-price">$60,00</span>
                 <a href="#" class="btn-add-to-cart">Add to Cart</a>
             </div>
             <div class="mss-product">
-                <img src="block-seven-eight-img/reebok-workout-shorts.jpg" alt="reebok-workout-shorts">
+                <img src="img/reebok-workout-shorts.jpg" alt="reebok-workout-shorts">
                 <h5 class="mss-product-tittle">Reebok Workout Shorts</h5>
                 <span class="mss-product-price">$25,00</span>
                 <a href="#" class="btn-add-to-cart">Add to Cart</a>
             </div>
             <div class="mss-product">
-                <img src="block-seven-eight-img/puma-fitness-shoes-grey.jpg" alt="puma-fitness-shoes-grey">
+                <img src="img/puma-fitness-shoes-grey.jpg" alt="puma-fitness-shoes-grey">
                 <h5 class="mss-product-tittle">Puma Fitness Shoes in Grey</h5>
                 <span class="mss-product-price">$60,00</span>
                 <a href="#" class="btn-add-to-cart">Add to Cart</a>
             </div>
             <div class="mss-product">
-                <img src="block-seven-eight-img/puma-essentia-tank-top.jpg" alt="puma-essentia-tank-top">
+                <img src="img/puma-essentia-tank-top.jpg" alt="puma-essentia-tank-top">
                 <h5 class="mss-product-tittle">Puma Essential Tank Top</h5>
                 <span class="mss-product-price">$43,00</span>
                 <a href="#" class="btn-add-to-cart">Add to Cart</a>
             </div>
             <div class="mss-product">
-                <img src="block-seven-eight-img/nike-classic-polo-shirt.jpg" alt="nike-classic-polo-shirt">
+                <img src="img/nike-classic-polo-shirt.jpg" alt="nike-classic-polo-shirt">
                 <h5 class="mss-product-tittle">Nike Classic Polo T-Shirt</h5>
                 <span class="mss-product-price">$23,00</span>
                 <a href="#" class="btn-add-to-cart">Add to Cart</a>
@@ -187,7 +187,7 @@
     
     <!-- Get your discount section -->
     <section class="get-your-discount-section">
-        <img src="block-seven-eight-img/get-your-discount-background.png" alt="">
+        <img src="img/get-your-discount-background.png" alt="">
         <div class="">
             <h4>Sale of the month</h4>
             <h2>
@@ -203,19 +203,19 @@
 
     <!--Block 9-10 Pavlo start-->
     <div class="carusel">
-        <img width="300" src="block-nine-ten-img/carusel/one.jpg" alt="one">
+        <img width="300" src="img/carousel-one.jpg" alt="one">
         <h2>20% of all T-Shirt</h2>
         <a href="#">Shop Collection</a>
         <br>
-        <img width="300" src="block-nine-ten-img/carusel/two.jpg" alt="two">
+        <img width="300" src="img/carousel-two.jpg" alt="two">
         <h2>25% OFF All Trainers </h2>
         <a href="#">Shop Collection</a>
         <br>
-        <img width="300" src="block-nine-ten-img/carusel/three.jpg" alt="three">
+        <img width="300" src="img/carousel-three.jpg" alt="three">
         <h2>30% OFF ALL Jacket</h2>
         <a href="#">Shop Collection</a>
         <br>
-        <img width="300" src="block-nine-ten-img/carusel/four.jpg" alt="four">
+        <img width="300" src="img/carousel-four.jpg" alt="four">
         <h2>25% OFF All Trainers </h2>
         <a href="#">Shop Collection</a>
     </div>
@@ -231,63 +231,63 @@
         </div>
         <div>
             <div>
-                <img src="block-nine-ten-img/woman.jpg" alt="woman">
+                <img src="img/woman.jpg" alt="woman">
                 <br>
                 <a href="#">Puma Sports Bra</a>
                 <h2>$12,00USD</h2>
                 <button>"Add to Cart"</button>
             </div>
             <div>
-                <img src="block-nine-ten-img/woman-one.jpg" alt="woman-one">
+                <img src="img/woman-one.jpg" alt="woman-one">
                 <br>
                 <a href="#">Reebok Long Sleeve Top</a>
                 <h3>$18,00USD</h3>
                 <button>"Add to Cart"</button>
             </div>
             <div>
-                <img src="block-nine-ten-img/woman-two.jpg" alt="woman-two">
+                <img src="img/woman-two.jpg" alt="woman-two">
                 <br>
                 <a href="#">Quicksilver Workout Top</a>
                 <h3>$12,00USD</h3>
                 <button>"Add to Cart"</button>
             </div>
             <div>
-                <img src="block-nine-ten-img/man.jpg" alt="man">
+                <img src="img/man.jpg" alt="man">
                 <br>
                 <a href="#">Adidas Compression Tee</a>
                 <h3>$33,00USD</h3>
                 <button>"Add to Cart"</button>
             </div>
             <div>
-                <img src="block-nine-ten-img/man-one.jpg" alt="man-one">
+                <img src="img/man-one.jpg" alt="man-one">
                 <br>
                 <a href="#">Reebok Fitness Jacket</a>
                 <h3>$52,00USD</h3>
                 <button>"Add to Cart"</button>
             </div>
             <div>
-                <img src="block-nine-ten-img/man-two.jpg" alt="man-two">
+                <img src="img/man-two.jpg" alt="man-two">
                 <br>
                 <a href="#">Quicksilver Tech T-Shirt</a>
                 <h3>$21,00USD</h3>
                 <button>"Add to Cart</button>
             </div>
             <div>
-                <img src="block-nine-ten-img/sneakers.jpg" alt="sneakers">
+                <img src="img/sneakers.jpg" alt="sneakers">
                 <br>
                 <a href="#">Nike Amanda Running Shoes</a>
                 <h3>$120,00USD</h3>
                 <button>"Add to Cart"</button>
             </div>
             <div>
-                <img src="block-nine-ten-img/sneakers-one.jpg" alt="sneakers-one">
+                <img src="img/sneakers-one.jpg" alt="sneakers-one">
                 <br>
                 <a href="#">Puma Basket Shoes</a>
                 <h3>$140,00USD</h3>
                 <button>"Add to Cart</button>
             </div>
             <div>
-                <img src="block-nine-ten-img/sneakers-two.jpg" alt="sneakers-two">
+                <img src="img/sneakers-two.jpg" alt="sneakers-two">
                 <br>
                 <a href="#">Adidas Campus</a>
                 <h3>$130,00USD</h3>
@@ -297,6 +297,7 @@
         </div>
 
     </div>
+</main>
     <!--Block 9-10 end-->
 
     <!--Block 9-10 end-->
