Add section About Us>

--- a/index.html
+++ b/index.html
@@ -97,28 +97,26 @@
             <div class="img-about-us">
                 <img width="500" src="img/about-us.jpg" alt="Two Men">
             </div>
-            <div class="header-about-us">
+            <section class="text-about-us">
                 <h2><span>About Us</span><span>.</span></h2>
-            </div>
             <hr>
-            <div class="text-content">
-                <p><span class="text-content-header">
+                <p class="text-content-header">
                         Workout is an American fitness store created by fitness geeks for those who love sport and try
                         to
                         keep fit.
-                    </span></p>
+                    </p>
                 <p class="text-content-main">At Workout, we know that great results do not come from standing still. We
                     all
                     need to move, push boundaries, and achieve better results every day. The mission of our shop is to
                     support you in this.
                     We're sure that everyday fitness can change your lives and bodies forever. And we keep selling
                     comfortable and high-tech clothes and shoes for your outstanding results.</p>
-            </div>
             <div class="social-media-logo">
                 <a href="https://www.youtube.com/"><img src="img/icons/icon-youtube.svg" alt="Youtube icon"></a>
                 <a href="https://www.facebook.com/"><img src="img/icons/icon-facebook.svg" alt="Facebook icon"></a>
                 <a href="https://www.instagram.com/"><img src="img/icons/icon-instagram.svg" alt="Instagram icon"></a>
             </div>
+            </section>
         </div>
         <div class="new-fitness-collection">
             <div class="fitness-collection-image">
