change classes in section About Us

--- a/index.html
+++ b/index.html
@@ -97,15 +97,15 @@
             <div class="img-about-us">
                 <img width="500" src="img/about-us.jpg" alt="Two Men">
             </div>
-            <section class="text-about-us">
-                <h2><span>About Us</span><span>.</span></h2>
+            <section class="content-about-us">
+                <h2><span class="header-about-us">About Us</span><span class="header-dot-style">.</span></h2>
             <hr>
-                <p class="text-content-header">
+                <p class="info-about-us">
                         Workout is an American fitness store created by fitness geeks for those who love sport and try
                         to
                         keep fit.
                     </p>
-                <p class="text-content-main">At Workout, we know that great results do not come from standing still. We
+                <p class="about-us-main">At Workout, we know that great results do not come from standing still. We
                     all
                     need to move, push boundaries, and achieve better results every day. The mission of our shop is to
                     support you in this.
@@ -123,10 +123,9 @@
                 <img width="500" src="img/new-trend.jpg" alt="Sport Women">
             </div>
             <p>Trending.</p>
-            <h2><span class="fitnes-collection-header">New Fitness Collection</span><span>.</span></h2>
-            <div class="button-shop-now">
+            <h2><span class="fitnes-collection-header">New Fitness Collection</span><span class="header-dot-style">.</span></h2>
+            <div class="link-collection">
                 <a href="#collection">Shop Now</a>
-                <br>
             </div>
         </div>
         <!--Block 5-6 end-->
