--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sport Shop</title>
+    <title>Workout</title>
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="icon" href="img/icons/icon-company.png">
 </head>
 
 <body>
@@ -13,33 +15,36 @@
     <header>
         <div class="return-period">
             <p>
-                <b>We’ve extended our returns period to 30 days.</b>
+                We’ve extended our returns period to 30 days.
             </p>
         </div>
-        <div class="logo">
-            <img width="200" src="img/logo.svg" alt="logo">
-        </div>
-        <div class="nav">
-            <nav>
-                <a href="#about-us">About us</a>
-                <a href="#sale">Sale</a>
-                <a href="#collection">Collection</a>
-                <a href="#blog">Blog</a>
-                <a href="#contact-us">Contact us</a>
-            </nav>
-        </div>
-        <div class="social-media-logo">
-            <nav>
-                <a href="https://www.youtube.com/"> <img src="img/icons/icon-youtube.svg" alt="Youtube logo"></a>
-                <a href="https://www.facebook.com/"> <img src="img/icons/icon-facebook.svg" alt="Facebook logo"></a>
-                <a href="https://www.instagram.com/"> <img src="img/icons/icon-instagram.svg" alt="Instagram logo"></a>
-            </nav>
+        <div class="head">
+            <div class="logo">
+                <img width="200" src="img/logo.svg" alt="logo">
+            </div>
+            <div class="nav">
+                <nav>
+                    <a href="#about-us">About us</a>
+                    <a href="#sale">Sale</a>
+                    <a href="#collection">Collection</a>
+                    <a href="#blog">Blog</a>
+                    <a href="#contact-us">Contact us</a>
+                </nav>
+            </div>
+            <div class="social-media-logo">
+                <nav>
+                    <a href="https://www.youtube.com/"> <img src="img/icons/icon-youtube.svg" alt="Youtube logo"></a>
+                    <a href="https://www.facebook.com/"> <img src="img/icons/icon-facebook.svg" alt="Facebook logo"></a>
+                    <a href="https://www.instagram.com/"> <img src="img/icons/icon-instagram.svg"
+                            alt="Instagram logo"></a>
+                </nav>
+            </div>
         </div>
     </header>
     <main>
         <div class="front-page">
             <div class="second-block-background">
-                <img width="500" src="img/background.jfif" alt="Basketball player">
+                <img src="img/background.jfif" alt="Basketball player">
             </div>
             <div class="front-page-text">
                 <p><b>ASPIRE TO MORE</b></p>
@@ -99,23 +104,24 @@
             </div>
             <section class="content-about-us">
                 <h2><span class="header-about-us">About Us</span><span class="header-dot-style">.</span></h2>
-            <hr>
+                <hr>
                 <p class="info-about-us">
-                        Workout is an American fitness store created by fitness geeks for those who love sport and try
-                        to
-                        keep fit.
-                    </p>
+                    Workout is an American fitness store created by fitness geeks for those who love sport and try
+                    to
+                    keep fit.
+                </p>
                 <p class="about-us-main">At Workout, we know that great results do not come from standing still. We
                     all
                     need to move, push boundaries, and achieve better results every day. The mission of our shop is to
                     support you in this.
                     We're sure that everyday fitness can change your lives and bodies forever. And we keep selling
                     comfortable and high-tech clothes and shoes for your outstanding results.</p>
-            <div class="social-media-logo">
-                <a href="https://www.youtube.com/"><img src="img/icons/icon-youtube.svg" alt="Youtube icon"></a>
-                <a href="https://www.facebook.com/"><img src="img/icons/icon-facebook.svg" alt="Facebook icon"></a>
-                <a href="https://www.instagram.com/"><img src="img/icons/icon-instagram.svg" alt="Instagram icon"></a>
-            </div>
+                <div class="social-media-logo">
+                    <a href="https://www.youtube.com/"><img src="img/icons/icon-youtube.svg" alt="Youtube icon"></a>
+                    <a href="https://www.facebook.com/"><img src="img/icons/icon-facebook.svg" alt="Facebook icon"></a>
+                    <a href="https://www.instagram.com/"><img src="img/icons/icon-instagram.svg"
+                            alt="Instagram icon"></a>
+                </div>
             </section>
         </div>
         <div class="new-fitness-collection">
@@ -123,7 +129,8 @@
                 <img width="500" src="img/new-trend.jpg" alt="Sport Women">
             </div>
             <p>Trending.</p>
-            <h2><span class="fitnes-collection-header">New Fitness Collection</span><span class="header-dot-style">.</span></h2>
+            <h2><span class="fitnes-collection-header">New Fitness Collection</span><span
+                    class="header-dot-style">.</span></h2>
             <div class="link-collection">
                 <a href="#collection">Shop Now</a>
             </div>
