CSS for block About Us, fotter, iframe, contact information, shop nav and more

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <!--Block 5-6 Artem start-->
         <div id="about-us">
             <div class="img-about-us">
-                <img width="500" src="img/about-us.jpg" alt="Two Men">
+                <img width="500" height="500" src="img/about-us.jpg" alt="Two Men">
             </div>
             <section class="content-about-us">
                 <h2><span class="header-about-us">About Us</span><span class="header-dot-style">.</span></h2>
@@ -113,8 +113,9 @@
                 <p class="about-us-main">At Workout, we know that great results do not come from standing still. We
                     all
                     need to move, push boundaries, and achieve better results every day. The mission of our shop is to
-                    support you in this.
-                    We're sure that everyday fitness can change your lives and bodies forever. And we keep selling
+                    support you in this. </p>
+                <p class="about-us-main">We're sure that everyday fitness can change your lives and bodies forever. And
+                    we keep selling
                     comfortable and high-tech clothes and shoes for your outstanding results.</p>
                 <div class="social-media-logo">
                     <a href="https://www.youtube.com/"><img src="img/icons/icon-youtube.svg" alt="Youtube icon"></a>
@@ -297,14 +298,108 @@
             </div>
 
         </div>
+
+        <!--Block 9-10 end-->
+        <section class="deal-of-the-month">
+            <h2>DEAL OF THE MONTH.</h2>
+            <p>PUMA SPORTS BRA $50 $70</p>
+            <p>Start your fitness story right away with this comfortable bra and get advantage of our discount.</p>
+            <a href="#more-details">More Details</a>
+            <img src="img/stretch-women.jpg" alt="Stretching woman">
+            <div class="countdown">
+                <p>Here must be countdown</p>
+            </div>
+        </section>
+        <div class="workout">
+            <img src="img/workout-woman.jpg" alt="Fit Woman">
+            <p>100% ORIGINAL BRANDS</p>
+            <h2>KEEP FIT WITH COMFORT.</h2>
+            <p><span>Top Brands.</span><span>Delivery With DHL.</span><span>Easy return</span></p>
+            <p>Workout offers fitness clothing and footwear for those who want to change their lives and bodies for
+                better. We work only with the best sport brands to ensure that your training is really effective and
+                comfortable.</p>
+            <a href="#learn-more">Learn More</a>
+        </div>
+        <div class="blog">
+            <section>
+                <h3>Blog</h3>
+                <p>Read the latest articles from our experts.</p>
+                <hr>
+                <article>
+                    <h2>No blogposts yet..</h2>
+                </article>
+            </section>
+        </div>
+        <div class="our-newsletter">
+            <img src="img/newsletter-background.png" alt="logo">
+            <p> 10% OFF YOUR FIRST ORDER. SIGN UP TO OUR NEWSLETTER TO GET THIS SPECIAL OFFER. </p>
+            <form action="#">
+                <ul>
+                    <li>
+                        <input type="email" name="user_mail" value="Your email address">
+                    </li>
+                    <li>
+                        <button type="submit">Subscribe</button>
+                    </li>
+                </ul>
+            </form>
+        </div>
+        <div class="map-and-contacts">
+            <iframe
+                src="
+                https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3023.4185754150153!2d-74.18139188459445!3d40.73081427932994!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c2537102f5f5df%3A0xc3d5dc357162b4ec!2zMzI1IFVuaXZlcnNpdHkgQXZlLCBOZXdhcmssIE5KIDA3MTAyLCDQodCo0JA!5e0!3m2!1sru!2sua!4v1636233117165!5m2!1sru!2sua"
+                width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </div>
+        <section class="contacts">
+            <h2>Contacts.</h2>
+            <address>325 University Ave
+                Newark, NJ 07102</address>
+            <a href="tel:+12345678900">+12345678900</a>
+            <a href="email:workout@email.com">workout@email.com</a>
+        </section>
     </main>
-    <!--Block 9-10 end-->
-
-    <!--Block 9-10 end-->
-
-    <!--Block 11-12 Vasyil start-->
     <!--Block 11-12 end-->
-
+    <footer>
+        <img src="img/logo.svg" alt="logo">
+        <p>Workout offers fitness clothing and footwear for those who want to change their lives and bodies for better.
+        </p>
+        <div class="nav">
+            <h3>Navigation.</h3>
+            <hr>
+            <nav>
+                <a href="#about-us">About us</a>
+                <a href="#sale">Sale</a>
+                <a href="#collection">Collection</a>
+                <a href="#blog">Blog</a>
+                <a href="#contact-us">Contact us</a>
+            </nav>
+        </div>
+        <div class="shop-now-nav">
+            <h3>Shop</h3>
+            <hr>
+            <nav>
+                <a href="#woman">Woman.</a>
+                <a href="#men">Men.</a>
+                <a href="#shoes">Shoes.</a>
+                <a href="#clothes">Clothes.</a>
+                <a href="#sale">Sale.</a>
+            </nav>
+        </div>
+        <div class="follow-us">
+            <h3>Follow Us.</h3>
+            <hr>
+            <nav>
+                <a href="https://www.youtube.com/"> <img src="img/icons/icon-youtube.svg" alt="Youtube logo"></a>
+                <a href="https://www.facebook.com/"> <img src="img/icons/icon-facebook.svg" alt="Facebook logo"></a>
+                <a href="https://www.instagram.com/"> <img src="img/icons/icon-instagram.svg" alt="Instagram logo"></a>
+            </nav>
+        </div>
+        <hr>
+        <div class="all-rights-reserved">
+            <p>© Created by</p>
+            <p>ALL RIGHTS RESERVED</p>
+        </div>
+    </footer>
 </body>
 
 </html>
