--- a/index.html
+++ b/index.html
@@ -363,8 +363,9 @@
         <img src="img/logo.svg" alt="logo">
         <p>Workout offers fitness clothing and footwear for those who want to change their lives and bodies for better.
         </p>
-        <div class="nav">
-            <h3>Navigation.</h3>
+        <div class="foot">
+        <div class="second-nav">
+            <h3>Navigation</h3>
             <hr>
             <nav>
                 <a href="#about-us">About us</a>
@@ -378,15 +379,15 @@
             <h3>Shop</h3>
             <hr>
             <nav>
-                <a href="#woman">Woman.</a>
-                <a href="#men">Men.</a>
-                <a href="#shoes">Shoes.</a>
-                <a href="#clothes">Clothes.</a>
-                <a href="#sale">Sale.</a>
+                <a href="#woman">Woman</a>
+                <a href="#men">Men</a>
+                <a href="#shoes">Shoes</a>
+                <a href="#clothes">Clothes</a>
+                <a href="#sale">Sale</a>
             </nav>
         </div>
         <div class="follow-us">
-            <h3>Follow Us.</h3>
+            <h3>Follow Us</h3>
             <hr>
             <nav>
                 <a href="https://www.youtube.com/"> <img src="img/icons/icon-youtube.svg" alt="Youtube logo"></a>
@@ -399,6 +400,7 @@
             <p>© Created by</p>
             <p>ALL RIGHTS RESERVED</p>
         </div>
+    </div>
     </footer>
 </body>
 
