--- a/index.html
+++ b/index.html
@@ -31,12 +31,11 @@
                     <a href="#contact-us">Contact us</a>
                 </nav>
             </div>
-            <div class="social-media-logo">
+            <div class="social-media-logos">
                 <nav>
-                    <a href="https://www.youtube.com/"> <img src="img/icons/icon-youtube.svg" alt="Youtube logo"></a>
-                    <a href="https://www.facebook.com/"> <img src="img/icons/icon-facebook.svg" alt="Facebook logo"></a>
-                    <a href="https://www.instagram.com/"> <img src="img/icons/icon-instagram.svg"
-                            alt="Instagram logo"></a>
+                    <a href="https://www.youtube.com/"> <img width="50" src="img/icons/icon-youtube1.png" alt="Youtube logo"></a>
+                    <a href="https://www.facebook.com/"> <img width="35" src="img/icons/icon-facebook1.png" alt="Facebook logo"></a>
+                    <a href="https://www.instagram.com/"> <img width="35" src="img/icons/icon-instagram1.png" alt="Instagram logo"></a>
                 </nav>
             </div>
         </div>
