Alt+Shift+F, changed icons

--- a/index.html
+++ b/index.html
@@ -33,9 +33,12 @@
             </div>
             <div class="social-media-logos">
                 <nav>
-                    <a href="https://www.youtube.com/"> <img width="50" src="img/icons/icon-youtube1.png" alt="Youtube logo"></a>
-                    <a href="https://www.facebook.com/"> <img width="35" src="img/icons/icon-facebook1.png" alt="Facebook logo"></a>
-                    <a href="https://www.instagram.com/"> <img width="35" src="img/icons/icon-instagram1.png" alt="Instagram logo"></a>
+                    <a href="https://www.youtube.com/"> <img width="50" src="img/icons/icon-youtube.png"
+                            alt="Youtube logo"></a>
+                    <a href="https://www.facebook.com/"> <img width="35" src="img/icons/icon-facebook.png"
+                            alt="Facebook logo"></a>
+                    <a href="https://www.instagram.com/"> <img width="35" src="img/icons/icon-instagram.png"
+                            alt="Instagram logo"></a>
                 </nav>
             </div>
         </div>
@@ -99,7 +102,7 @@
         <!--Block 5-6 Artem start-->
         <div id="about-us">
             <div class="img-about-us">
-                <img  src="img/about-us.jpg" alt="Two Men">
+                <img src="img/about-us.jpg" alt="Two Men">
             </div>
             <section class="content-about-us">
                 <h2><span class="header-about-us">About Us</span><span class="header-dot-style">.</span></h2>
@@ -117,9 +120,11 @@
                     we keep selling
                     comfortable and high-tech clothes and shoes for your outstanding results.</p>
                 <div class="social-media-logo">
-                    <a href="https://www.youtube.com/"><img src="img/icons/icon-youtube.svg" alt="Youtube icon"></a>
-                    <a href="https://www.facebook.com/"><img src="img/icons/icon-facebook.svg" alt="Facebook icon"></a>
-                    <a href="https://www.instagram.com/"><img src="img/icons/icon-instagram.svg"
+                    <a href="https://www.youtube.com/"><img width="50" src="img/icons/icon-youtube.png"
+                            alt="Youtube icon"></a>
+                    <a href="https://www.facebook.com/"><img width="35" src="img/icons/icon-facebook.png"
+                            alt="Facebook icon"></a>
+                    <a href="https://www.instagram.com/"><img width="35" src="img/icons/icon-instagram.png"
                             alt="Instagram icon"></a>
                 </div>
             </section>
@@ -363,43 +368,44 @@
         <p>Workout offers fitness clothing and footwear for those who want to change their lives and bodies for better.
         </p>
         <div class="foot">
-        <div class="second-nav">
-            <h3>Navigation</h3>
+            <div class="second-nav">
+                <h3>Navigation</h3>
+                <hr>
+                <nav>
+                    <a href="#about-us">About us</a>
+                    <a href="#sale">Sale</a>
+                    <a href="#collection">Collection</a>
+                    <a href="#blog">Blog</a>
+                    <a href="#contact-us">Contact us</a>
+                </nav>
+            </div>
+            <div class="shop-now-nav">
+                <h3>Shop</h3>
+                <hr>
+                <nav>
+                    <a href="#woman">Woman</a>
+                    <a href="#men">Men</a>
+                    <a href="#shoes">Shoes</a>
+                    <a href="#clothes">Clothes</a>
+                    <a href="#sale">Sale</a>
+                </nav>
+            </div>
+            <div class="follow-us">
+                <h3>Follow Us</h3>
+                <hr>
+                <nav>
+                    <a href="https://www.youtube.com/"> <img src="img/icons/icon-youtube.svg" alt="Youtube logo"></a>
+                    <a href="https://www.facebook.com/"> <img src="img/icons/icon-facebook.svg" alt="Facebook logo"></a>
+                    <a href="https://www.instagram.com/"> <img src="img/icons/icon-instagram.svg"
+                            alt="Instagram logo"></a>
+                </nav>
+            </div>
             <hr>
-            <nav>
-                <a href="#about-us">About us</a>
-                <a href="#sale">Sale</a>
-                <a href="#collection">Collection</a>
-                <a href="#blog">Blog</a>
-                <a href="#contact-us">Contact us</a>
-            </nav>
+            <div class="all-rights-reserved">
+                <p>© Created by</p>
+                <p>ALL RIGHTS RESERVED</p>
+            </div>
         </div>
-        <div class="shop-now-nav">
-            <h3>Shop</h3>
-            <hr>
-            <nav>
-                <a href="#woman">Woman</a>
-                <a href="#men">Men</a>
-                <a href="#shoes">Shoes</a>
-                <a href="#clothes">Clothes</a>
-                <a href="#sale">Sale</a>
-            </nav>
-        </div>
-        <div class="follow-us">
-            <h3>Follow Us</h3>
-            <hr>
-            <nav>
-                <a href="https://www.youtube.com/"> <img src="img/icons/icon-youtube.svg" alt="Youtube logo"></a>
-                <a href="https://www.facebook.com/"> <img src="img/icons/icon-facebook.svg" alt="Facebook logo"></a>
-                <a href="https://www.instagram.com/"> <img src="img/icons/icon-instagram.svg" alt="Instagram logo"></a>
-            </nav>
-        </div>
-        <hr>
-        <div class="all-rights-reserved">
-            <p>© Created by</p>
-            <p>ALL RIGHTS RESERVED</p>
-        </div>
-    </div>
     </footer>
 </body>
 
