--- a/index.html
+++ b/index.html
@@ -394,10 +394,9 @@
                 <h3>Follow Us</h3>
                 <hr>
                 <nav>
-                    <a href="https://www.youtube.com/"> <img src="img/icons/icon-youtube.svg" alt="Youtube logo"></a>
-                    <a href="https://www.facebook.com/"> <img src="img/icons/icon-facebook.svg" alt="Facebook logo"></a>
-                    <a href="https://www.instagram.com/"> <img src="img/icons/icon-instagram.svg"
-                            alt="Instagram logo"></a>
+                    <a href="https://www.youtube.com/"> <img src="img/icons/icon-youtube.png" alt="Youtube logo"></a>
+                    <a href="https://www.facebook.com/"> <img src="img/icons/icon-facebook.png" alt="Facebook logo"></a>
+                    <a href="https://www.instagram.com/"> <img src="img/icons/icon-instagram.png" alt="Instagram logo"></a>
                 </nav>
             </div>
             <hr>
