--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <!--Block 5-6 Artem start-->
         <div id="about-us">
             <div class="img-about-us">
-                <img src="img/about-us.jpg" alt="Two Men">
+                <img src="img/two-spotsmen.jpg" alt="Two Men">
             </div>
             <section class="content-about-us">
                 <h2><span class="header-about-us">About Us</span><span class="header-dot-style">.</span></h2>
