pictures in separate folders by their blocks

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <!--Block 5-6 Artem start-->
         <div id="about-us">
             <div class="img-about-us">
-                <img src="img/two-spotsmen.jpg" alt="Two Men">
+                <img src="img/about-us/two-spotsmen.jpg" alt="Two Men">
             </div>
             <section class="content-about-us">
                 <h2><span class="header-about-us">About Us</span><span class="header-dot-style">.</span></h2>
@@ -131,7 +131,7 @@
         </div>
         <div class="new-fitness-collection">
             <div class="fitness-collection-image">
-                <img src="img/new-trend.jpg" alt="Sport Women">
+                <img src="img/about-us/new-trend.jpg" alt="Sport Women">
             </div>
             <p>Trending.</p>
             <h2><span class="fitnes-collection-header">New Fitness Collection</span><span
@@ -309,13 +309,13 @@
             <p>PUMA SPORTS BRA $50 $70</p>
             <p>Start your fitness story right away with this comfortable bra and get advantage of our discount.</p>
             <a href="#more-details">More Details</a>
-            <img src="img/stretch-women.jpg" alt="Stretching woman">
+            <img src="img/deal-of-the-month/stretch-women.jpg" alt="Stretching woman">
             <div class="countdown">
                 <p>Here must be countdown</p>
             </div>
         </section>
         <div class="workout">
-            <img src="img/workout-woman.jpg" alt="Fit Woman">
+            <img src="img/deal-of-the-month/workout-woman.jpg" alt="Fit Woman">
             <p>100% ORIGINAL BRANDS</p>
             <h2>KEEP FIT WITH COMFORT.</h2>
             <p><span>Top Brands.</span><span>Delivery With DHL.</span><span>Easy return</span></p>
@@ -335,7 +335,7 @@
             </section>
         </div>
         <div class="our-newsletter">
-            <img src="img/newsletter-background.png" alt="logo">
+            <img src="img/newsletter/newsletter-background.png" alt="logo">
             <p> 10% OFF YOUR FIRST ORDER. SIGN UP TO OUR NEWSLETTER TO GET THIS SPECIAL OFFER. </p>
             <form action="#">
                 <ul>
